# MOTDemo

./: CMakeLists.txt  readme.txt
src/: BgsNameEnum.h  YYJSBgs.cpp  YYJSBgs.h  YYJSFlowStatistics.cpp  YYJSFlowStatistics.h  YYJSTrackerManager.cpp  YYJSTrackerManager.h  global.h  main.cpp
